components/treeview/index.css
/*!
Copyright 2023 Adobe. All rights reserved.
This file is licensed to you under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. You may obtain a copy
of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under
the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
OF ANY KIND, either express or implied. See the License for the specific language
governing permissions and limitations under the License.
*/

.spectrum-TreeView {
  --spectrum-treeview-item-min-block-size: var(--spectrum-component-height-75);
  --spectrum-treeview-item-indentation: var(--spectrum-treeview-item-indentation-medium);
  --spectrum-treeview-item-padding-default: 0px;
  --spectrum-treeview-item-padding-block-end: var(--spectrum-component-edge-to-text-100);
  --spectrum-treeview-item-text-padding-block-start: var(--spectrum-component-top-to-text-100);
  --spectrum-treeview-item-text-padding-block-end: var(--spectrum-component-bottom-to-text-100);
  --spectrum-treeview-item-affordance-size: var(--spectrum-component-height-100);

  --spectrum-treeview-section-spacing: var(--spectrum-treeview-item-indentation-medium);
  --spectrum-treeview-heading-font-weight: var(--spectrum-bold-font-weight);
  --spectrum-treeview-item-hover-offset: var(--spectrum-spacing-50);

  --spectrum-treeview-item-border-size: var(--spectrum-border-width-200);
  --spectrum-treeview-item-border-size-selected: 1px;
  --spectrum-treeview-item-border-radius: 0px;

  --spectrum-treeview-item-border-color-selected: var(--spectrum-blue-800);
  --spectrum-treeview-item-border-color-focus: var(--spectrum-blue-700);

  --spectrum-treeview-item-background-color-hover: var(--spectrum-gray-200);
  --spectrum-treeview-item-background-color-focus: var(--spectrum-gray-200);

  --spectrum-treeview-item-border-color-quiet-selected: transparent;
  
  --spectrum-treeview-item-icon-gap: var(--spectrum-text-to-visual-100);
  --spectrum-treeview-item-icon-color: var(--spectrum-gray-700);
  --spectrum-treeview-item-icon-color-hover: var(--spectrum-gray-900);
  --spectrum-treeview-item-icon-color-focus: var(--spectrum-gray-900);
  --spectrum-treeview-item-icon-color-selected: var(--spectrum-gray-900);
  --spectrum-treeview-item-icon-color-disabled: var(--spectrum-disabled-content-color);

  --spectrum-treeview-item-text-color: var(--spectrum-neutral-content-color-default);
  --spectrum-treeview-item-text-color-selected: var(--spectrum-gray-900);
  --spectrum-treeview-item-text-color-disabled: var(--spectrum-gray-500);
  --spectrum-treeview-item-text-color-focus: var(--spectrum-gray-900);
  --spectrum-treeview-item-text-color-hover: var(--spectrum-gray-900);

  --spectrum-treeview-indicator-inset-inline-start: var(--spectrum-component-edge-to-visual-only-200);
  --spectrum-treeview-indicator-margin-inline-start: calc(-1 * var(--spectrum-component-height-200));
  --spectrum-treeview-indicator-margin-block-end: calc(-1 * var(--spectrum-component-edge-to-visual-only-200));
  --spectrum-treeview-indicator-margin-inline-end: var(--spectrum-text-to-visual-75);
  --spectrum-treeview-indicator-padding-inline: var(--spectrum-component-edge-to-text-100);
  --spectrum-treeview-indicator-padding-block: var(--spectrum-component-edge-to-visual-only-200);
  --spectrum-treeview-indicator-animation-duration: var(--spectrum-animation-duration-100);
}

.spectrum-TreeView--sizeS {
  --spectrum-treeview-item-text-padding-block-start: var(--spectrum-spacing-75);
  --spectrum-treeview-item-indentation: var(--spectrum-treeview-item-indentation-small);
  --spectrum-treeview-item-padding-block-end: var(--spectrum-component-edge-to-text-75);
  --spectrum-treeview-item-affordance-size: var(--spectrum-component-height-75);
  --spectrum-treeview-item-icon-gap: var(--spectrum-text-to-visual-75);
}

.spectrum-TreeView--sizeL {
  --spectrum-treeview-item-text-padding-block-end: var(--spectrum-component-bottom-to-text-200);
  --spectrum-treeview-item-indentation: var(--spectrum-treeview-item-indentation-large);
  --spectrum-treeview-item-min-block-size: var(--spectrum-component-height-100);
  --spectrum-treeview-item-padding-block-end: var(--spectrum-component-edge-to-text-200);
  --spectrum-treeview-item-affordance-size: var(--spectrum-component-height-200);
  --spectrum-treeview-item-icon-gap: var(--spectrum-text-to-visual-200);
}

.spectrum-TreeView--sizeXL {
  --spectrum-treeview-item-text-padding-block-start: var(--spectrum-component-top-to-text-300);
  --spectrum-treeview-item-text-padding-block-end: var(--spectrum-component-bottom-to-text-300);
  --spectrum-treeview-item-indentation: var(--spectrum-treeview-item-indentation-extra-large);
  --spectrum-treeview-item-min-block-size: var(--spectrum-component-height-200);
  --spectrum-treeview-item-padding-block-end: var(--spectrum-component-edge-to-text-300);
  --spectrum-treeview-item-affordance-size: var(--spectrum-component-height-300);
  --spectrum-treeview-item-icon-gap: var(--spectrum-text-to-visual-300);
}

.spectrum-TreeView--quiet {
  --mod-treeview-item-background-color-selected: var(--mod-treeview-item-background-color-quiet-selected, var(--spectrum-treeview-item-background-color-quiet-selected));
  --mod-treeview-item-border-color-selected: var(--mod-treeview-item-border-color-selected-quiet, transparent);
}

.spectrum-TreeView {
  display: block;
  position: relative;
  padding: 0;
  list-style: none;
  outline: none;
  user-select: none;

  /* Close (hide) nested treeviews by default. */
  .spectrum-TreeView {
    position: static;
    block-size: 0;
    visibility: hidden;
    padding-inline-start: var(--mod-treeview-item-indentation, var(--spectrum-treeview-item-indentation));
  }
}
/* ... */

